<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginTop="8dp"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/ll_ingredient_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_ingredient"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/gray_50"
            tools:text="- X units of Ingredient" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_recipe_name"
            android:visibility="gone"
            android:backgroundTint="@color/blue_500"
            android:textColor="@color/blue_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_edit_ingredient"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_ingredient_amount"
            android:hint="@string/amount"
            android:inputType="numberDecimal"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_ingredient_unit"
            android:hint="@string/unit"
            android:layout_weight=".7"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_ingredient_name"
            android:hint="@string/name"
            android:layout_weight="2"
            android:layout_width="0dp"
            android:layout_height="wrap_content" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_ingredient"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_500"
            android:textColor="@color/teal_50"
            android:padding="8dp"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel"
            android:layout_weight=".6"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red_600"
            android:textColor="@color/red_50"
            android:padding="8dp"
            android:text="@string/x" />
    </LinearLayout>

</LinearLayout>