<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.HomeFragment">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/red_600"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_sub_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/pink_400"
        android:gravity="center"
        android:text="@string/sub_title"
        android:textSize="16sp"
        android:textStyle="bold" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_add_recipe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:backgroundTint="@color/teal_600"
        android:text="@string/new_recipe"
        android:textColor="@color/green_50" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tv_empty_gifs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="32dp"
        android:text="@string/no_recipes"
        android:visibility="gone" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recipes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/recipe_card" />

    </ScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>