<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.EditRecipeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_recipe"
            android:backgroundTint="@color/teal_500"
            android:textColor="@color/teal_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_go_back"
            android:backgroundTint="@color/red_600"
            android:textColor="@color/red_50"
            android:layout_margin="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

    </LinearLayout>



    <LinearLayout
        android:id="@+id/ll_view_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_recipe_name"
            android:layout_gravity="center"
            android:textColor="@color/gray_50"
            android:textColorHint="@color/gray_50"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            tools:text="Recipe Name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue_500"
            android:textColor="@color/blue_50"
            android:textColorHint="@color/gray_50"
            android:text="@string/edit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_edit_recipe_name"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_recipe_name"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColorHint="@color/gray_50"
            android:textColor="@color/gray_50"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_500"
            android:textColor="@color/teal_50"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_recipe_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red_500"
            android:textColor="@color/red_50"
            android:text="@string/cancel" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_view_recipe_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_recipe_description"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textColor="@color/gray_50"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="Recipe description goes here..." />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_edit_recipe_description"
            android:backgroundTint="@color/blue_500"
            android:textColor="@color/blue_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_edit_recipe_description"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/it_recipe_description"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:textColorHint="@color/gray_50"
            android:textColor="@color/gray_50"
            android:layout_height="wrap_content"
            android:hint="@string/recipe_description" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_save_recipe_description"
            android:backgroundTint="@color/teal_500"
            android:textColor="@color/teal_50"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_cancel_recipe_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red_500"
            android:textColor="@color/red_50"
            android:text="@string/cancel" />

    </LinearLayout>






    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_ingredients"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/ingredient_item" />

    </ScrollView>


</LinearLayout>